--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9,17 +9,298 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Primeras filas:\n",
+                        "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+                        "0            6      148             72             35        0  33.6   \n",
+                        "1            1       85             66             29        0  26.6   \n",
+                        "2            8      183             64              0        0  23.3   \n",
+                        "3            1       89             66             23       94  28.1   \n",
+                        "4            0      137             40             35      168  43.1   \n",
+                        "\n",
+                        "   DiabetesPedigreeFunction  Age  Outcome  \n",
+                        "0                     0.627   50        1  \n",
+                        "1                     0.351   31        0  \n",
+                        "2                     0.672   32        1  \n",
+                        "3                     0.167   21        0  \n",
+                        "4                     2.288   33        1  \n",
+                        "\n",
+                        "Resumen estadístico:\n",
+                        "       Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
+                        "count   768.000000  768.000000     768.000000     768.000000  768.000000   \n",
+                        "mean      3.845052  120.894531      69.105469      20.536458   79.799479   \n",
+                        "std       3.369578   31.972618      19.355807      15.952218  115.244002   \n",
+                        "min       0.000000    0.000000       0.000000       0.000000    0.000000   \n",
+                        "25%       1.000000   99.000000      62.000000       0.000000    0.000000   \n",
+                        "50%       3.000000  117.000000      72.000000      23.000000   30.500000   \n",
+                        "75%       6.000000  140.250000      80.000000      32.000000  127.250000   \n",
+                        "max      17.000000  199.000000     122.000000      99.000000  846.000000   \n",
+                        "\n",
+                        "              BMI  DiabetesPedigreeFunction         Age     Outcome  \n",
+                        "count  768.000000                768.000000  768.000000  768.000000  \n",
+                        "mean    31.992578                  0.471876   33.240885    0.348958  \n",
+                        "std      7.884160                  0.331329   11.760232    0.476951  \n",
+                        "min      0.000000                  0.078000   21.000000    0.000000  \n",
+                        "25%     27.300000                  0.243750   24.000000    0.000000  \n",
+                        "50%     32.000000                  0.372500   29.000000    0.000000  \n",
+                        "75%     36.600000                  0.626250   41.000000    1.000000  \n",
+                        "max     67.100000                  2.420000   81.000000    1.000000  \n",
+                        "\n",
+                        "Valores faltantes:\n",
+                        "Pregnancies                 0\n",
+                        "Glucose                     0\n",
+                        "BloodPressure               0\n",
+                        "SkinThickness               0\n",
+                        "Insulin                     0\n",
+                        "BMI                         0\n",
+                        "DiabetesPedigreeFunction    0\n",
+                        "Age                         0\n",
+                        "Outcome                     0\n",
+                        "dtype: int64\n",
+                        "\n",
+                        "Datos de entrenamiento: 537 muestras\n",
+                        "Datos de prueba: 231 muestras\n",
+                        "Proporción de diabetes en entrenamiento: 0.35\n",
+                        "Proporción de diabetes en prueba: 0.35\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/tmp/ipykernel_7330/1986648209.py:43: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+                        "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+                        "\n",
+                        "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+                        "\n",
+                        "\n",
+                        "  df[col].fillna(df[col].median(), inplace=True)\n",
+                        "/tmp/ipykernel_7330/1986648209.py:43: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+                        "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+                        "\n",
+                        "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+                        "\n",
+                        "\n",
+                        "  df[col].fillna(df[col].median(), inplace=True)\n",
+                        "/tmp/ipykernel_7330/1986648209.py:43: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+                        "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+                        "\n",
+                        "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+                        "\n",
+                        "\n",
+                        "  df[col].fillna(df[col].median(), inplace=True)\n",
+                        "/tmp/ipykernel_7330/1986648209.py:43: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+                        "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+                        "\n",
+                        "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+                        "\n",
+                        "\n",
+                        "  df[col].fillna(df[col].median(), inplace=True)\n",
+                        "/tmp/ipykernel_7330/1986648209.py:43: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+                        "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+                        "\n",
+                        "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+                        "\n",
+                        "\n",
+                        "  df[col].fillna(df[col].median(), inplace=True)\n"
+                    ]
+                }
+            ],
             "source": [
-                "# Your code here"
+                "import pandas as pd\n",
+                "import numpy as np\n",
+                "import matplotlib.pyplot as plt\n",
+                "import seaborn as sns\n",
+                "from sklearn.model_selection import train_test_split\n",
+                "from sklearn.tree import DecisionTreeClassifier\n",
+                "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+                "from sklearn.ensemble import RandomForestClassifier\n",
+                "from sklearn.model_selection import GridSearchCV\n",
+                "import joblib\n",
+                "import json\n",
+                "\n",
+                "# URL alternativa confiable del dataset de diabetes\n",
+                "url = \"https://raw.githubusercontent.com/4GeeksAcademy/decision-tree-project-tutorial/main/diabetes.csv\"\n",
+                "df = pd.read_csv(url)\n",
+                "\n",
+                "# Exploración inicial\n",
+                "print(\"Primeras filas:\")\n",
+                "print(df.head())\n",
+                "print(\"\\nResumen estadístico:\")\n",
+                "print(df.describe())\n",
+                "print(\"\\nValores faltantes:\")\n",
+                "print(df.isnull().sum())\n",
+                "\n",
+                "# Histogramas\n",
+                "df.hist(figsize=(12, 10))\n",
+                "plt.tight_layout()\n",
+                "plt.savefig('histograms.png')\n",
+                "plt.close()\n",
+                "\n",
+                "# Correlación\n",
+                "plt.figure(figsize=(10, 8))\n",
+                "sns.heatmap(df.corr(), annot=True, cmap='coolwarm')\n",
+                "plt.title('Matriz de Correlación')\n",
+                "plt.savefig('correlation_matrix.png')\n",
+                "plt.close()\n",
+                "\n",
+                "# Preprocesamiento\n",
+                "# Reemplazar ceros con la mediana en columnas clave\n",
+                "zero_cols = ['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']\n",
+                "for col in zero_cols:\n",
+                "    df[col] = df[col].replace(0, np.nan)\n",
+                "    df[col].fillna(df[col].median(), inplace=True)\n",
+                "\n",
+                "# Dividir datos\n",
+                "X = df.drop('Outcome', axis=1)\n",
+                "y = df['Outcome']\n",
+                "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
+                "\n",
+                "print(f\"\\nDatos de entrenamiento: {X_train.shape[0]} muestras\")\n",
+                "print(f\"Datos de prueba: {X_test.shape[0]} muestras\")\n",
+                "print(f\"Proporción de diabetes en entrenamiento: {y_train.mean():.2f}\")\n",
+                "print(f\"Proporción de diabetes en prueba: {y_test.mean():.2f}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 10,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "[ÁRBOL DE DECISIÓN] Precisión: 0.69\n"
+                    ]
+                }
+            ],
+            "source": [
+                "\n",
+                "\n",
+                "# Entrenar árbol de decisión\n",
+                "dt = DecisionTreeClassifier(random_state=42)\n",
+                "dt.fit(X_train, y_train)\n",
+                "\n",
+                "# Evaluar\n",
+                "y_pred_dt = dt.predict(X_test)\n",
+                "accuracy_dt = accuracy_score(y_test, y_pred_dt)\n",
+                "print(f\"\\n[ÁRBOL DE DECISIÓN] Precisión: {accuracy_dt:.2f}\")\n",
+                "\n",
+                "# Matriz de confusión\n",
+                "cm = confusion_matrix(y_test, y_pred_dt)\n",
+                "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
+                "plt.xlabel('Predicho')\n",
+                "plt.ylabel('Real')\n",
+                "plt.title('Matriz de Confusión - Árbol de Decisión')\n",
+                "plt.savefig('confusion_matrix_dt.png')\n",
+                "plt.close()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 11,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "[MEJORES HIPERPARÁMETROS] {'max_depth': 10, 'max_features': 'sqrt', 'min_samples_split': 10, 'n_estimators': 50}\n",
+                        "[RANDOM FOREST] Precisión: 0.74\n",
+                        "\n",
+                        "COMPARACIÓN DE MODELOS:\n",
+                        "- Árbol de Decisión: 0.69\n",
+                        "- Random Forest: 0.74\n",
+                        "Mejora: 4.3%\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Configurar parámetros para búsqueda\n",
+                "param_grid = {\n",
+                "    'n_estimators': [50, 100, 200],\n",
+                "    'max_depth': [5, 10, 20, None],\n",
+                "    'min_samples_split': [2, 5, 10],\n",
+                "    'max_features': ['sqrt', 'log2']\n",
+                "}\n",
+                "\n",
+                "# Crear y entrenar modelo con búsqueda de hiperparámetros\n",
+                "rf = RandomForestClassifier(random_state=42)\n",
+                "grid_search = GridSearchCV(rf, param_grid, cv=5, scoring='accuracy')\n",
+                "grid_search.fit(X_train, y_train)\n",
+                "\n",
+                "# Mejores parámetros\n",
+                "best_params = grid_search.best_params_\n",
+                "print(f\"\\n[MEJORES HIPERPARÁMETROS] {best_params}\")\n",
+                "\n",
+                "# Modelo final con mejores parámetros\n",
+                "best_rf = grid_search.best_estimator_\n",
+                "y_pred_rf = best_rf.predict(X_test)\n",
+                "accuracy_rf = accuracy_score(y_test, y_pred_rf)\n",
+                "print(f\"[RANDOM FOREST] Precisión: {accuracy_rf:.2f}\")\n",
+                "\n",
+                "# Comparación de modelos\n",
+                "print(\"\\nCOMPARACIÓN DE MODELOS:\")\n",
+                "print(f\"- Árbol de Decisión: {accuracy_dt:.2f}\")\n",
+                "print(f\"- Random Forest: {accuracy_rf:.2f}\")\n",
+                "print(f\"Mejora: {(accuracy_rf - accuracy_dt)*100:.1f}%\")\n",
+                "\n",
+                "# Importancia de características\n",
+                "feature_importances = pd.Series(best_rf.feature_importances_, index=X.columns)\n",
+                "plt.figure(figsize=(10, 6))\n",
+                "feature_importances.sort_values().plot(kind='barh')\n",
+                "plt.title('Importancia de Características (Random Forest)')\n",
+                "plt.savefig('feature_importance.png')\n",
+                "plt.close()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 12,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "Modelo guardado como 'random_forest_model.pkl'\n",
+                        "Resultados guardados en 'model_results.json'\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Guardar modelo\n",
+                "joblib.dump(best_rf, 'random_forest_model.pkl')\n",
+                "\n",
+                "# Guardar resultados\n",
+                "results = {\n",
+                "    'model': 'Random Forest',\n",
+                "    'accuracy': accuracy_rf,\n",
+                "    'best_params': best_params,\n",
+                "    'feature_importances': feature_importances.to_dict()\n",
+                "}\n",
+                "\n",
+                "with open('model_results.json', 'w') as f:\n",
+                "    json.dump(results, f, indent=4)\n",
+                "\n",
+                "print(\"\\nModelo guardado como 'random_forest_model.pkl'\")\n",
+                "print(\"Resultados guardados en 'model_results.json'\")"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -33,14 +314,9 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.13"
+            "version": "3.11.4"
         },
-        "orig_nbformat": 4,
-        "vscode": {
-            "interpreter": {
-                "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
-            }
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
